User Profile Page and TokenHandler

--- a/UI/Course.UI/Views/_ViewImports.cshtml
+++ b/UI/Course.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Course.UI
 @using Course.UI.Models
+@using Course.UI.Models.Identity
+@using Course.UI.Models.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
